--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,6 +79,10 @@ jobs:
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       run: terraform fmt --recursive
+      
+    # Validate code
+    - name: Terraform Validate
+      run: terraform validate
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
