--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,46 +62,44 @@ jobs:
         shell: bash
 
     steps:
-     - name: 'Az CLI login'
-        uses: azure/login@v1
-        with:
+     - name: 'Az login' 
+       uses: azure/login@v1
+       with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  
-      - name: 'Run az commands'
-        run: |
+       run: |
           az account show
           az group list
           pwd 
     # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
+     - name: Checkout
+       uses: actions/checkout@v3
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+     - name: Setup Terraform
+       uses: hashicorp/setup-terraform@v1
+       with:
+         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+     - name: Terraform Init
+       run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt --recursive
+     - name: Terraform Format
+       run: terraform fmt --recursive
       
     # Validate code
-    - name: Terraform Validate
-      run: terraform validate
+     - name: Terraform Validate
+       run: terraform validate
 
     # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan
+     - name: Terraform Plan
+       run: terraform plan
 
       # On push to main, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve
+     - name: Terraform Apply
+       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+       run: terraform apply -auto-approve
