--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,10 +68,10 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-       run: |
-          az account show
-          az group list
-          pwd 
+      # run: |
+      #    az account show
+      #   az group list
+      #    pwd 
     # Checkout the repository to the GitHub Actions runner
      - name: Checkout
        uses: actions/checkout@v3
