--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,8 +62,8 @@ jobs:
         shell: bash
 
     steps:
-     - name: 'Az login' 
-       uses: azure/login@v1
+     - name: 'Azure Login using OIDC' 
+       uses: ./.github/workflows/composite/azure-oidc-login
        with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
