--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,7 +50,28 @@ on:
     - main
   pull_request:
 
+permissions:
+  id-token: write
+  
 jobs:
+  dev:
+    name: Deploy to Dev
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+    - uses: actions/checkout@v2
+    - name: Azure Login using OIDC
+      uses: ./.github/workflows/composite/azure-oidc-login
+      with:
+        tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+        client_id: ${{ secrets.AZURE_CLIENT_ID }}
+        subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    - name: 'Run az commands'
+      run: |
+        az account show
+        az group list
+        pwd
+        
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
@@ -62,16 +83,6 @@ jobs:
         shell: bash
 
     steps:
-     - name: 'Azure Login using OIDC' 
-       uses: ./.github/workflows/composite/azure-oidc-login
-       with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      # run: |
-      #    az account show
-      #   az group list
-      #    pwd 
     # Checkout the repository to the GitHub Actions runner
      - name: Checkout
        uses: actions/checkout@v3
